--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,20 @@
 
   <groupId>com.soebes.smpp</groupId>
   <artifactId>smpp</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>SoEBeS Maven Parent POM</name>
-  <description>This POM contains the default configuration for all projects which are located in com.soebes</description>
-  <url>https://github.com/khmarbaise/smpp</url>
+  <description>This POM contains the default configuration for all projects which are located 
+    in com.soebes</description>
+  <url>https://github.com/khmarbaise/${smpp.component}</url>
   <inceptionYear>2011</inceptionYear>
 
-  <!-- This marked as deprecated for Maven 3.X. This is checked by maven-enforcer-plugin -->
-  <!--  http://jira.codehaus.org/browse/MNG-4840 -->
-  <!--  http://jira.codehaus.org/browse/MNG-5297 -->
+  <!--
+    !  This marked as deprecated for Maven 3.X. This is checked by maven-enforcer-plugin
+    ! https://issues.apache.org/jira/browse/MNG-4840
+    ! https://issues.apache.org/jira/browse/MNG-5297
+  -->
   <prerequisites>
     <maven>${maven.version}</maven>
   </prerequisites>
@@ -44,11 +47,20 @@
     </developer>
   </developers>
 
-  <!-- Must be overwritten in every project. -->
+  <!--
+    ! If we are on GitHub, just 
+    ! define the property if not
+    ! just redefine it.
+  -->
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/khmarbaise/smpp/issues</url>
+    <url>https://github.com/khmarbaise/${smpp.component}/issues</url>
   </issueManagement>
+  <ciManagement>
+    <system>Travis-CI</system>
+    <url>https://travis-ci.org/khmarbaise/${smpp.component}</url>
+  </ciManagement>
+
 
   <properties>
     <!-- Maven Plugins -->
@@ -80,16 +92,13 @@
     <maven-source-plugin.version>3.0.0</maven-source-plugin.version>
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
 
-    <maven-site-plugin.version>3.4</maven-site-plugin.version>
+    <maven-site-plugin.version>3.5.1</maven-site-plugin.version>
 
     <!-- The following belong together -->
     <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
     <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
     <maven-surefire-report-plugin.version>2.19.1</maven-surefire-report-plugin.version>
 
-
-    <!-- Plugin for maven plugin development -->
-    <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
 
     <!-- MojoHaus Plugins (formerly Codehaus) -->
     <appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
@@ -112,6 +121,8 @@
     <!-- target/source of the java code 1.7. -->
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+
+    <smpp.component>smpp</smpp.component>
   </properties>
 
   <scm>
@@ -131,8 +142,8 @@
       <url>http://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <site>
-      <id>github</id>
-      <url>scm:git:ssh://git@github.com/khmarbaise/smpp.git</url>
+      <id>site</id>
+      <url>https://github.com/khmarbaise/smpp</url>
     </site>
   </distributionManagement>
 
@@ -348,6 +359,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>${maven-site-plugin.version}</version>
+          <configuration>
+            <!--
+              ! Don't deploy with maven-site-plugin
+            <skipDeploy>true</skipDeploy>
+            <stagingDirectory>target/staging</stagingDirectory>
+            -->
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -373,12 +391,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>${maven-checkstyle-plugin.version}</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-plugin-plugin</artifactId>
-          <version>${maven-plugin-plugin.version}</version>
         </plugin>
 
         <!-- Codehaus Plugins -->
@@ -418,8 +430,18 @@
           <artifactId>maven-scm-publish-plugin</artifactId>
           <version>${maven-scm-publish-plugin.version}</version>
           <configuration>
+            <pubScmUrl>${project.scm.developerConnection}</pubScmUrl>
             <scmBranch>gh-pages</scmBranch>
           </configuration>
+          <executions>
+            <execution>
+              <id>scm-publish</id>
+              <phase>site-deploy</phase><!-- deploy site with maven-scm-publish-plugin -->
+              <goals>
+                <goal>publish-scm</goal>
+              </goals>
+            </execution>
+         </executions>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -498,6 +520,82 @@
                 </requireProperty>
               </rules>    
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <reportPlugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-project-info-reports-plugin</artifactId>
+              <version>${maven-project-info-report-plugin.version}</version>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-plugin-plugin</artifactId>
+              <version>${maven-plugin-plugin.version}</version>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-invoker-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-report-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>jdepend-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>versions-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <version>${maven-javadoc-plugin.version}</version>
+              <reportSets>
+                <reportSet>
+                  <id>default</id>
+                  <reports>
+                    <report>javadoc</report>
+                    <report>test-javadoc</report>
+                  </reports>
+                </reportSet>
+              </reportSets>
+            </plugin>
+          </reportPlugins>
+        </configuration>
+        <executions>
+          <execution>
+            <id>attach-descriptor</id>
+            <goals>
+              <goal>attach-descriptor</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.tinyjee.dim</groupId>
+        <artifactId>doxia-include-macro</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <id>initialize-doxia-include-macro</id>
+            <phase>pre-site</phase>
+            <goals>
+              <goal>initialize</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
@@ -700,15 +798,6 @@
         <artifactId>assertj-core</artifactId>
         <version>2.1.0</version>
       </dependency>
-      <!--
-        ! Dependencies for maven-plugin
-        ! development.
-      -->
-      <dependency>
-        <groupId>org.apache.maven.plugin-tools</groupId>
-        <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.4</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -755,4 +844,8 @@
       </build>
     </profile>
   </profiles>
+
+  <modules>
+    <module>smpp-plugins</module>
+  </modules>
 </project>
