--- a/.github/release-notes.yml
+++ b/.github/release-notes.yml
@@ -1,13 +1,14 @@
-sections:
-  - title: "Bug Fixes"
-    emoji: "🐞"
-    labels: ["bug"]
-  - title: "Improvement"
-    emoji: "⭐"
-    labels: ["improvement"]
-  - title: "Dependency Upgrades"
-    emoji: "🔨"
-    labels: ["dependency-upgrade"]
-  - title: "Documentation"
-    emoji: "📔"
-    labels: ["documentation"]
+releasenotes:
+  sections:
+    - title: "Bug Fixes"
+      emoji: "🐞"
+      labels: ["bug"]
+    - title: "Improvement"
+      emoji: "⭐"
+      labels: ["improvement"]
+    - title: "Dependency Upgrades"
+      emoji: "🔨"
+      labels: ["dependency-upgrade"]
+    - title: "Documentation"
+      emoji: "📔"
+      labels: ["documentation"]
