--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,8 @@ version: 2
 updates:
   - package-ecosystem: "maven"
     directory: "/"
-    update_schedule: "daily"
+    schedule:
+      - interval: "daily"
     default_labels:
       - "dependency-upgrade"
       - "dependabot"
