--- a/.github/workflows/jdkbuilds.yml
+++ b/.github/workflows/jdkbuilds.yml
@@ -30,7 +30,7 @@ jobs:
   openjdk:
     strategy:
       matrix:
-        jdk: [jdk-8-slim, jdk-11-slim, jdk-13, jdk-14]
+        jdk: [jdk-8-slim, jdk-11-slim, openjdk-15]
     name: "OpenJDK ${{ matrix.jdk }}"
     runs-on: ubuntu-latest
     container: "maven:3.6.3-${{ matrix.jdk }}"
