--- a/smpp-boot/pom.xml
+++ b/smpp-boot/pom.xml
@@ -13,7 +13,7 @@
 
   <properties>
     <java.version>11</java.version>
-    <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+    <spring-boot.version>2.4.5</spring-boot.version>
   </properties>
 
   <name>SoEBeS Maven Parent POM for Spring Boot</name>
