--- a/pom.xml
+++ b/pom.xml
@@ -608,7 +608,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <configuration>
-          <targetJdk>${maven.compiler.target}</targetJdk>
+          <targetJdk>${maven.compiler.release}</targetJdk>
         </configuration>
       </plugin>
 
