--- a/smpp-plugins/pom.xml
+++ b/smpp-plugins/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.soebes.smpp</groupId>
     <artifactId>smpp</artifactId>
-    <version>5.3.8-SNAPSHOT</version>
+    <version>5.3.8</version>
   </parent>
 
   <packaging>pom</packaging>
