--- a/pom.xml
+++ b/pom.xml
@@ -262,8 +262,8 @@
           <version>3.10.1</version>
           <configuration>
             <compilerArgs>
-              <arg>-Xlint:deprecation</arg>
-              <arg>-Xlint:unchecked</arg>
+              <arg>-Xlint:all</arg>
+              <arg>-Xlint:-processing</arg>
             </compilerArgs>
           </configuration>
         </plugin>
