--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
 name-template: 'Release v$RESOLVED_VERSION'
-tag-template: '$RESOLVED_VERSION'
+tag-template: 'smpp-$RESOLVED_VERSION'
 categories:
     - title: '🚀 Features'
       labels:
