--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,4 @@
-name-template: 'Release v$RESOLVED_VERSION'
+name-template: '$RESOLVED_VERSION'
 tag-template: 'smpp-$RESOLVED_VERSION'
 categories:
     - title: '🚀 Features'
